# reconstruction_zone

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  EULA.md  GUMROAD_README.md  HANDOVER.md  QUICKSTART.txt  README-web.md  README.md  README_equirect_workflow.md  SKILL.md  THIRD_PARTY_LICENSES.md  equirect_to_perspectives.py  extract_frames.py  first attempt.md  install.bat  launch.bat  metashape_exporter.py  panoex_gui.py  photogrammetry-masking.skill  pyproject.toml  reconstruction_zone.spec  reframing_gui.py  requirements-dev.txt  requirements-lite.txt  requirements-yolo.txt  requirements.txt  setup_install.py  video-to-frames.skill
benchmarks/: BENCHMARK_RESULTS.md  extraction_benchmark.py
docs/: DETECTION_SECTION_AUDIT.md  FUTURE_TODO.md  GPU_EXTRACTION_TEST_PLAN.md  LICENSE_AUDIT.md  PANOEX_GUI_USER_GUIDE.md  README_VISUALS.md  REFRAME_MASKS_PLAN.md  SAM3_INTEGRATION_PLAN.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
legacy/: README.md  adaptive_density_stub.md  filter_blurry.py  panoex_gui.py
masking_gui/: .studio_prefs.json  IMPROVEMENTS.md  Masking Studio.bat  README.md  masking_studio.py  masking_v2.py  review_gui.py  review_status.py  shadow_detection.py
panoex/: __main__.py  cli.py
planning/: sam3-gated-model-reference.md
prep360/: __init__.py  __main__.py  cli.py  distribution.py
reconstruction_gui/: README.md  ReconstructionStudio.bat  __init__.py  activity_store.py  adjust_engine.py  adjust_workflow.py  alignment_profiles.py  app_infra.py  app_paths.py  colmap_binary_validation_adapter.py  colmap_runner.py  colmap_validation.py  masking_queue.py  matting.py  model_downloader.py  model_paths.py  pointcloud_viewer.py  project_exporters.py  project_scanner.py  project_store.py  reconstruction_pipeline.py  reconstruction_zone.py  review_gui.py  review_masks.py  review_status.py  rig_presets.py  sam3_click_session.py  sam3_pipeline.py  sam3_setup.py  sam_refinement.py  setup_wizard.py  setup_wizard_lite.py  shadow_detection.py  static_masks.py  subprocess_env.py  test_pipeline_sam3.py  thumb_cache.py  vos_propagation.py  widgets.py
reconstruction_web/: __init__.py  __main__.py  file_access.py  jobs.py  projects.py  server.py  shell.py  shell_html.py  state.py
resources/: framedistill-analysis.md
scripts/: METASHAPE_ERP_ORDER.txt  audit_local_imports.py  build_gumroad.py  copy_cv2_cuda_dlls.ps1  copy_ultralytics_runtime_data.ps1  launch_manual_blank_setup_wizard.ps1  metashape_apply_erp_rig.py  metashape_load_erp_rig.py  (+16 more)
(+209 files in other folders)
