[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconstruction-zone"
version = "0.1.0"
description = "Photogrammetry preprocessing toolkit — frame extraction, 360 reframing, auto-masking, and dataset preparation for 3D reconstruction."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Alex MacGregor Gee" },
]
keywords = ["photogrammetry", "masking", "3d-reconstruction", "gaussian-splatting", "360-video"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "numpy",
    "opencv-python",
    "Pillow",
    "tqdm",
    "pyyaml",
    "customtkinter>=5.0",
    "py360convert",
]

[project.optional-dependencies]
# PyTorch with CUDA — install separately:
#   pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu126
# Not listed here because pip can't resolve CUDA index URLs from pyproject.toml.

models = [
    "rfdetr",
    "supervision",
    "transformers>=4.50,<5.0",
    "huggingface_hub",
]

# AGPL-3.0 licensed — included in GitHub release only, NOT in Gumroad builds.
yolo = [
    "ultralytics",
]

dev = [
    "pytest",
    "ruff",
    "pyinstaller",
]

[project.urls]
Homepage = "https://github.com/alexmgee/reconstruction_zone"
Repository = "https://github.com/alexmgee/reconstruction_zone"
Issues = "https://github.com/alexmgee/reconstruction_zone/issues"

[project.scripts]
prep360 = "prep360.cli:main"

[project.gui-scripts]
reconstruction-zone = "reconstruction_gui.reconstruction_zone:main"

[tool.setuptools.packages.find]
include = ["prep360*", "reconstruction_gui*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line length — handled by formatter, not linter
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "reconstruction_gui"]
